--- a/css/index.css
+++ b/css/index.css
@@ -3,252 +3,392 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
+/* end reset */
+/* Colors and fonts: Light text: rgb(225, 239, 230); Dark background: rgb(0, 4, 17); Dark transparency: background-color: rgb(0, 4, 17, .8);​​ */
+
 * {
-    box-sizing: border-box;
-    max-width:100%;
+  box-sizing: border-box;
+  max-width: 100%;
+  /* outline: 1px solid cyan; */
 }
 
 html {
-    max-width: 1920px;
-    min-width: 428px;
-    width: 100%;
-    font-size: 62.5%;
+  max-width: 1920px;
+  min-width: 428px;
+  width: 100%;
+  font-size: 62.5%;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  color: rgb(225, 239, 230);
 }
 
-h1, h2, h3, h4, h5, h6, p, a, i {
-    text-decoration: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+i {
+  text-decoration: none;
 }
 
 h1 {
-    font-size: 7.5rem;
+  font-size: 4.5rem; /* 7.5rem; */
 }
 
 h2 {
-    font-size: 6rem;
+  font-size: 6rem;
 }
 
 h3 {
-    font-size: 5rem;
+  font-size: 5rem;
 }
 
-p, a {
-    font-size: 3rem;
+p,
+a {
+  /* font-size: 3rem; */
+}
+
+a {
+  text-decoration: none;
+  color: rgb(225, 239, 230);
 }
 
 /* header section */
 header {
-    width: 100%;
-    height: 100vh;
-    background-image: url('../img/home-header.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  width: 100%;
+  height: 90vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  display: flex;
+  align-items: flex-start;
+  text-align: center;
+}
+
+header#home {
+  background-image: url("../img/home-header.jpg");
+}
+
+header#menu {
+  background-image: url("../img/menu-header.jpg");
+}
+
+header div {
+  width: 100%;
+  /* position: fixed; */
+  background-color: rgb(0, 4, 17, 0.8);
+  padding: 2% 0;
+}
+
+.links {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.social{
+    /* outline: 1px solid red; */
+    /* width: 50%; */
+    display: flex;
+    justify-content:center;
+    /* align-items:center;space-evenly */
+    flex-wrap:wrap;
+    padding: 1.3% 0;
+}
+
+.social i{
+    width: 10%;
+    transform: scale(1.3);
 }
 
 /* spacers */
 .spacer {
-    width: 100%;
-    height: 20vh;
-    background-color: rgb(0, 4, 17);
+  width: 100%;
+  height: 20vh;
+  background-color: rgb(0, 4, 17);
 }
 .spacer-sm {
-    width: 100%;
-    height: 10vh;
-    background-color: rgb(0, 4, 17);
+  width: 100%;
+  height: 10vh;
+  background-color: rgb(0, 4, 17);
 }
 
 /* gallery section */
 .gallery {
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    background-color: rgb(0, 4, 17);
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  background-color: rgb(0, 4, 17);
 }
 
 /* about us section */
 .about {
-    width: 100%;
-    height: 75vh;
-    text-align: center;
-    background-image: url("../img/staff-cooks.jpg");
-    background-size: cover;
-    background-position: top;
-    background-repeat: no-repeat;
+  width: 100%;
+  height: 75vh;
+  text-align: center;
+  background-image: url("../img/staff-cooks.jpg");
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
 .about-container {
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 4, 17, .8);
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 4, 17, 0.8);
 }
 
 .about h2 {
-    width: 100%;
+  width: 100%;
 }
 
 .about-container .text {
-    width: 50%;
+  width: 50%;
 }
 
 /* contact us section */
 .contact {
-    text-align: center;
-    background-image: url("../img/jumbo-restaurant.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgb(0, 4, 17);
+  text-align: center;
+  background-image: url("../img/jumbo-restaurant.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgb(0, 4, 17);
 }
 
 .contact-container {
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 4, 17, .8);
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 4, 17, 0.8);
 }
 
 .contact h2 {
-    padding-top: 5vh;
+  padding-top: 5vh;
 }
 
 .contact h3 {
-    padding-top: 2.5vh;
+  padding-top: 2.5vh;
 }
 
 .contact p {
-    padding: .5vh 0;
+  padding: 0.5vh 0;
 }
 
 .info {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 .address {
-    width: 25%;
+  width: 25%;
 }
 
 .hours {
-    width: 25%;
-    padding-bottom: 2.5vh;
+  width: 25%;
+  padding-bottom: 2.5vh;
 }
 
 .contacts {
-    width: 25%;
+  width: 25%;
 }
 
 /* footer section */
 footer {
-    width: 100%;
-    height: 15vh;
-    padding-top: 2.5vh;
-    font-size: 3rem;
+  width: 100%;
+  height: 15vh;
+  padding-top: 2.5vh;
+  font-size: 3rem;
 }
 
 /* mobile media query */
 @media (max-width: 428px) {
-    /* header section */
-    
+  /* header section */
 
-    /* gallery section */
-    .gallery {
-        height: auto;
-    }
-    
-    /* about us section */
+  /* gallery section */
+  .gallery {
+    height: auto;
+  }
 
-    .about {
-        height: 200vh;
-    }
-    
-    .about h2 {
-        width: 100%;
-        padding-top: 5vh;
-    }
-    
-    .about-container .text {
-        width: 85%;
-    }
-    
-    /* contact us section */
-    .contact h3 {
-        padding-top: 2.5vh;
-    }
-    
-    .info {
-        flex-wrap: wrap;
-    }
-    
-    .address {
-        width: 100%;
-        padding-bottom: 2.5vh;
-    }
-    
-    .hours {
-        width: 100%;
-    }
-    
-    .contacts {
-        width: 100%;
-        padding-bottom: 2.5vh;
-    }
+  /* about us section */
 
-    /* footer section */
-    footer {
-        height: auto;
-        padding-top: 2.5vh;
-        font-size: 2rem;
-    }
+  .about {
+    height: 200vh;
+  }
+
+  .about h2 {
+    width: 100%;
+    padding-top: 5vh;
+  }
+
+  .about-container .text {
+    width: 85%;
+  }
+
+  /* contact us section */
+  .contact h3 {
+    padding-top: 2.5vh;
+  }
+
+  .info {
+    flex-wrap: wrap;
+  }
+
+  .address {
+    width: 100%;
+    padding-bottom: 2.5vh;
+  }
+
+  .hours {
+    width: 100%;
+  }
+
+  .contacts {
+    width: 100%;
+    padding-bottom: 2.5vh;
+  }
+
+  /* footer section */
+  footer {
+    height: auto;
+    padding-top: 2.5vh;
+    font-size: 2rem;
+  }
 }
