--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,7 @@ table {
 * {
   box-sizing: border-box;
   max-width: 100%;
-  /* outline: 1px solid cyan; */
+ /* outline: 1px solid rgba(54, 133, 185, 0.8); */
 }
 
 html {
@@ -210,7 +210,7 @@ header div {
   width: 100%;
   /* position: fixed; */
   background-color: rgb(0, 4, 17, 0.8);
-  padding: 2% 0;
+  padding: .3% 0;
 }
 
 .links {
@@ -223,11 +223,12 @@ header div {
 .social{
     /* outline: 1px solid red; */
     /* width: 50%; */
-    display: flex;
-    justify-content:center;
+    /* display: flex; */
+    /* justify-content:center; */
     /* align-items:center;space-evenly */
-    flex-wrap:wrap;
+    /* flex-wrap:wrap; */
     padding: 1.3% 0;
+    background-color: rgb(0, 4, 17, 0);
 }
 
 .social i{
