--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,7 @@ table {
 * {
   box-sizing: border-box;
   max-width: 100%;
- /* outline: 1px solid rgba(54, 133, 185, 0.8); */
+  /* outline: 1px solid rgba(54, 133, 185, 0.8); */
 }
 
 html {
@@ -149,6 +149,7 @@ body {
   font-size: 1.8rem;
   line-height: 1.5;
   color: rgb(225, 239, 230);
+  background-color: rgb(0, 4, 17);
 }
 
 h1,
@@ -168,11 +169,11 @@ h1 {
 }
 
 h2 {
-  font-size: 6rem;
+  font-size: 4rem; /* 6rem; */
 }
 
 h3 {
-  font-size: 5rem;
+  font-size: 3rem; /* 5rem;*/
 }
 
 p,
@@ -198,6 +199,10 @@ header {
   text-align: center;
 }
 
+#home {
+  margin: 2rem 0;
+}
+
 header#home {
   background-image: url("../img/home-header.jpg");
 }
@@ -210,7 +215,7 @@ header div {
   width: 100%;
   /* position: fixed; */
   background-color: rgb(0, 4, 17, 0.8);
-  padding: .3% 0;
+  /* padding: .3% 0; */
 }
 
 .links {
@@ -220,20 +225,14 @@ header div {
   align-items: center;
 }
 
-.social{
-    /* outline: 1px solid red; */
-    /* width: 50%; */
-    /* display: flex; */
-    /* justify-content:center; */
-    /* align-items:center;space-evenly */
-    /* flex-wrap:wrap; */
-    padding: 1.3% 0;
-    background-color: rgb(0, 4, 17, 0);
+.social {
+  padding: 1.3% 0;
+  background-color: rgb(0, 4, 17, 0);
 }
 
-.social i{
-    width: 10%;
-    transform: scale(1.3);
+.social i {
+  width: 10%;
+  transform: scale(1.3);
 }
 
 /* spacers */
@@ -251,15 +250,31 @@ header div {
 /* gallery section */
 .gallery {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   text-align: center;
   background-color: rgb(0, 4, 17);
+  
+}
+
+.gallery-container {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 3rem;
+  justify-content: space-evenly;
+  /* align-items: center; */
+  margin: 2rem auto;
+}
+
+.galleryContainer div {
+  width: 30%;
 }
 
 /* about us section */
 .about {
   width: 100%;
-  height: 75vh;
+  /* height: 75vh; */
   text-align: center;
   background-image: url("../img/staff-cooks.jpg");
   background-size: cover;
@@ -274,10 +289,12 @@ header div {
   justify-content: center;
   align-items: center;
   background-color: rgb(0, 4, 17, 0.8);
+  padding: 5rem 0;
 }
 
 .about h2 {
   width: 100%;
+  margin: 0 0 9rem 0;
 }
 
 .about-container .text {
@@ -334,9 +351,36 @@ header div {
 /* footer section */
 footer {
   width: 100%;
-  height: 15vh;
-  padding-top: 2.5vh;
-  font-size: 3rem;
+  /* height: 15vh; */
+  padding: 2.5vh 3rem;
+  font-size: 2rem; /* 3rem; */
+  display: flex;
+  
+  justify-content: space-around;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.signup-form {
+
+}
+
+.signup-form#input {
+}
+
+.nav-footer {
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.copyright {
+  padding-right: 10rem;
+  width: 100%;
+}
+.copyright p {
+  text-align: right;
+  font-size: 1.5rem;
 }
 
 /* mobile media query */
