--- a/css/menu.css
+++ b/css/menu.css
@@ -49,7 +49,9 @@ table {
 
 * {
     box-sizing: border-box;
-}
+    max-width: 100%;
+    /* outline: 1px solid rgba(54, 133, 185, 0.8); */
+  }
 
 html {
     max-width: 1920px;
@@ -60,6 +62,8 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
+    color: rgb(225, 239, 230);
+    background-color: rgb(0, 4, 17);
 }
 
 h1, h2, h3, h4, h5, h6, p, a, i {
@@ -109,15 +113,50 @@ header {
 }
 
 /* menu */
-
-.menu {
+.menu{
     width: 100%;
-    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: rgb(0, 4, 17, 0.8);
+}
+
+.menu-section {
+    width: 40%;
+    
+}
+
+.bg-menu {
+    width: 100%;
+    /* background-color: rgb(0, 4, 17); */
     background-image: url('../img/staff-bartender.jpg');
-    background-color: rgb(0, 4, 17);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu-item {
+    width:90%;
+    
+}
+
+.menu-section, .drinks, .appetizers, .soup-salad, .desserts{
+
+}
+
+article h2{
+    width: 100%;
+    margin: 10rem 0;
+    text-align: center;
+}
+
+article h3{
+    /* width:fit-content; */
+    margin: 5rem 0;
+    /* text-align: center; */
 }
 
 /* footer section */
